log/build_2021-11-14_23-11-59/client/stderr.log
  File "/home/dave/team/test_ws/install/client/lib/python3.6/site-packages/client/client_node.py", line 38
    while not self.cli.wait_for_service(timeout_sec=1.0) && (test.check() == False):
                                                          ^
SyntaxError: invalid syntax

